# Athena

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.ci.yaml  cloudbuild.yaml  pyproject.toml
deploy/: artifact-cleanup-policy.json  cloud-run-env.yaml  monitoring-dashboard.json
deploy/observability/: alert-policies.json  apply-observability.ps1  deep-observability-dashboard.json  log-metrics.json
docs/: deep-observability.md  gcp-cicd-domain-guide.md  gcp-operations-monitoring.md
frontend/: .env.example  .firebaserc  README.md  firebase.json  firestore.rules  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/app/: App.tsx
frontend/src/hooks/: useBooking.ts  usePersistentChat.ts
frontend/src/services/: adkClient.ts  apiClient.ts  assistantService.ts  authService.ts  bookingApiClient.ts  chatRepository.ts  firebaseClient.ts  telemetry.ts
frontend/src/types/: index.ts
frontend/src/utils/: downloadAppointmentPdf.ts
hanoi_heart_assistant/: __init__.py  adk_runtime.py  agent.py  booking_runtime.py  llm.py  observability.py  runtime.py  schedule_api.py  service.py  telemetry_api.py
hanoi_heart_assistant/.adk/: session.db
hanoi_heart_assistant/agents/: __init__.py  appointment_agent.py  medical_agent.py  patient_journey_agent.py  price_agent.py
hanoi_heart_assistant/auth/: __init__.py  auth_service.py  config.py  db_service.py  main.py  routes.py
hanoi_heart_assistant/static/schedule/: app.js  index.html  style.css
hanoi_heart_assistant/tools/: __init__.py  appointment_tools.py  medical_tools.py  price_tools.py  schedule_tools.py
tests/: conftest.py  test_auth_backend.py  test_llm.py  test_observability.py  test_runtime.py  test_schedule_api.py  test_schedule_tools.py  test_tools.py
(+31 files in other folders)
