[project]
name = "hanoi-heart-assistant"
version = "0.1.0"
description = "Multi-agent customer care assistant for Hanoi Heart Hospital built with Google ADK."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "litellm>=1.75.5,!=1.82.7,!=1.82.8",
    "openai>=1.0.0",
    "orjson>=3.11.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
