[project]
name = "hanoi-heart-assistant"
version = "0.1.0"
description = "Multi-agent customer care assistant for Hanoi Heart Hospital built with Google ADK."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk[otel-gcp]>=1.0.0",
    "google-cloud-firestore>=2.19.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "litellm>=1.75.5,!=1.82.7,!=1.82.8",
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "orjson>=3.11.9",
    "playwright>=1.50.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115,<1.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30,<1.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "opentelemetry-exporter-gcp-logging>=1.12.0a0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
cache_dir = ".cache/pytest"
addopts = "--basetemp=.pytest-tmp -p no:cacheprovider"
markers = [
    "live: tests that access the official hospital website and require network",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
